--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/normalize.css">
-    <!-- <link rel="stylesheet" href="./css/main.css"> -->
-    <link rel="stylesheet" href="./css/mini.css">
+    <link rel="stylesheet" href="./css/main.css">
+    <!-- <link rel="stylesheet" href="./css/mini.css"> -->
 </head>
 <body>
     <header class="site__header">
@@ -41,6 +41,10 @@
                 <a class="header__link" href="#">
                     VIEW PLANS
                 </a>
+                <button class="menu">
+                    <img class="menu__img" src="./images/menu.svg" alt="Menu"
+                    width="32" height="32">
+                </button>
             </div>
         </div>
     </header>
@@ -118,9 +122,11 @@
     <footer class="site__footer">
         <div class="container">
             <div class="footer__inner">
-                <img src="./images/site-logo.svg" alt="Site LOgo"
+               <div class="footer__logo">
+                <img class="footer__img" src="./images/site-logo.svg" alt="Site LOgo"
                 width="111"
                 height="18">
+               </div>
                 <a class="footer__link" href="#">
                     <img class="apps" src="./images/apps.svg" alt="Apps"
                 width="144"
